@@ -129,6 +129,49 @@
          includes="**/*.class"
          manifest="${jar.manifest}"></jar>
   </target>
+  <target name="runtime"
+          depends="loadclasspath">
+    <description>Run target</description>
+    <java fork="true"
+          classname="${main.class2}"
+          module="${module}"
+          spawn="true">
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
+      <jvmarg value="--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+      <arg value="1230" />
+      <modulepath>
+        <pathelement path="${dist.dir}" />
+      </modulepath>
+    </java>
+    <sleep seconds="10" />
+    <telnet port="1230"
+            server="localhost"
+            timeout="20"
+            initialCR="yes">
+      <read />
+      <read />
+    </telnet>
+    <exec executable="jps">
+      <arg value="-l" />
+      <redirector outputproperty="process.pid">
+        <outputfilterchain>
+          <linecontains>
+            <contains value="${module}/${main.class2}" />
+          </linecontains>
+          <replacestring from=" ${module}/${main.class2}" />
+        </outputfilterchain>
+      </redirector>
+    </exec>
+    <exec executable="kill"
+          osfamily="unix">
+      <arg value="-9" />
+      <arg value="${process.pid}" />
+    </exec>
+  </target>
   <target name="runecho"
           depends="loadclasspath">
     <description>Run target</description>
@@ -385,6 +428,9 @@
       <launcher name="${launcher.name1}"
                 module="${module}"
                 mainClass="${main.class1}" />
+      <launcher name="${launcher.name2}"
+                module="${module}"
+                mainClass="${main.class2}" />
     </link>
   </target>
 </project>
